--- a/frontend/src/components/homePage/HomePage.scss
+++ b/frontend/src/components/homePage/HomePage.scss
@@ -15,6 +15,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 10px 0;
         h1 {
             font-size: 4rem;
             color: $black-header;
@@ -32,5 +33,8 @@
     img {
         width: 400px;
         height: 400px;
+    }
+    .buttons-bottom {
+        padding-bottom: 10px;
     }
 }
