--- a/frontend/src/components/homePage/HomePage.scss
+++ b/frontend/src/components/homePage/HomePage.scss
@@ -37,4 +37,10 @@
     .buttons-bottom {
         padding-bottom: 10px;
     }
+    .error-message {
+        color: $error;
+        font-size: 2.5rem;
+        text-shadow: 5px 3px 2px #3F1B11;
+        text-transform: uppercase;
+    }
 }
