--- a/frontend/src/components/newMonitor/NewMonitor.scss
+++ b/frontend/src/components/newMonitor/NewMonitor.scss
@@ -1,7 +1,38 @@
-main.newMonitor {
-    iframe {
+@import './../../variables.scss';
+.newMonitor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .inhalt {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .url-wrapper {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .iframe-place {
         margin-top: 20px;
-        min-height: 50vh;
-        min-width: 80%;
+        min-height: 70vh;
+        min-width: 95%;
+        border: solid 1px $beige;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        iframe {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    input {
+        height: 100%;
+        width: 80%;
+        border: solid 1px $beige;
+    }
+    h1 {
+        margin-top: 5%;
     }
 }
