--- a/frontend/src/components/newMonitor/NewMonitor.scss
+++ b/frontend/src/components/newMonitor/NewMonitor.scss
@@ -8,29 +8,34 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
-    .url-wrapper {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-    .iframe-place {
-        margin-top: 20px;
-        min-height: 70vh;
-        min-width: 95%;
-        border: solid 1px $beige;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        iframe {
+        .url-wrapper {
+            display: flex;
+            justify-content: center;
             width: 100%;
-            height: 100%;
+            input {
+                height: 100%;
+                width: 80%;
+                border: solid 1px $beige;
+            }
         }
-    }
-    input {
-        height: 100%;
-        width: 80%;
-        border: solid 1px $beige;
+        .iframe-place {
+            margin-top: 20px;
+            min-height: 70vh;
+            min-width: 95%;
+            border: solid 1px $beige;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            iframe {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .form-wrapper {
+            margin-top: 20px;
+            min-width: 95%;
+            border: 1px solid $beige;
+        }
     }
     h1 {
         margin-top: 5%;
