--- a/frontend/src/components/newMonitor/NewMonitor.scss
+++ b/frontend/src/components/newMonitor/NewMonitor.scss
@@ -20,7 +20,7 @@
         }
         .iframe-place {
             margin-top: 20px;
-            min-height: 70vh;
+            min-height: 90vh;
             min-width: 95%;
             border: solid 1px $beige;
             display: flex;
@@ -29,6 +29,7 @@
             iframe {
                 width: 100%;
                 height: 100%;
+                background-color: white;
             }
         }
         .form-wrapper {
