--- a/frontend/src/components/room.tsx/Room.scss
+++ b/frontend/src/components/room.tsx/Room.scss
@@ -15,7 +15,7 @@
         justify-content: flex-end;
         padding: 10px 40px;
     }
-    .cardsWrapper {
+    #cardsWrapper {
         width: 90%;
         margin: 20px auto;
         .header {
@@ -35,6 +35,12 @@
             .title {
                 width: 100%;
                 border-bottom: solid 1px rgba(0, 0, 0, .125);
+            }
+            .buttons {
+                display: flex;
+                justify-content: space-between;
+                align-items: baseline;
+                margin-top: 5px;
             }
             i,
             p,
