--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -18,7 +18,7 @@ main {
 }
 
 p {
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 500;
     color: $beige;
 }
@@ -31,7 +31,7 @@ ul {
         margin: 15px 0;
         font-weight: bold;
         color: $black;
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
 }
 
@@ -46,4 +46,10 @@ ul {
 .col-lg-2 {
     padding-right: 0 !important;
     padding-left: 0 !important;
+}
+
+@media screen and (max-width: 480px) {
+    ul {
+        list-style-type: none;
+    }
 }
