--- a/frontend/src/components/homePage/HomePage.scss
+++ b/frontend/src/components/homePage/HomePage.scss
@@ -17,7 +17,7 @@
         align-items: center;
         padding: 10px 0;
         h1 {
-            font-size: 4rem;
+            font-size: 3rem;
             color: $black-header;
             font-weight: bold;
         }
@@ -31,8 +31,8 @@
         align-items: center;
     }
     img {
-        width: 400px;
-        height: 400px;
+        width: 300px;
+        height: 300px;
     }
     .buttons-bottom {
         padding-bottom: 10px;
@@ -42,5 +42,16 @@
         font-size: 2.5rem;
         text-shadow: 5px 3px 2px #3F1B11;
         text-transform: uppercase;
+    }
+    .logged {
+        font-size: 1.75rem;
+    }
+    @media screen and (max-width: 480px) {
+        img {
+            display: none;
+        }
+        header h1 {
+            text-align: center;
+        }
     }
 }
