--- a/frontend/src/components/newMonitor/NewMonitor.scss
+++ b/frontend/src/components/newMonitor/NewMonitor.scss
@@ -19,7 +19,7 @@
             }
         }
         .iframe-place {
-            margin-top: 20px;
+            margin: 20px 0;
             min-height: 90vh;
             min-width: 95%;
             border: solid 1px $beige;
