mobile first approach

--- a/frontend/src/components/room.tsx/Room.scss
+++ b/frontend/src/components/room.tsx/Room.scss
@@ -62,4 +62,21 @@
             }
         }
     }
+    @media screen and (max-width: 480px) {
+        header {
+            h1 {
+                font-size: 1.75rem;
+                max-width: 90%;
+            }
+            svg {
+                margin-right: 5px;
+            }
+            word-wrap: break-word;
+            /* IE 5.5-7 */
+            white-space: -moz-pre-wrap;
+            /* Firefox 1.0-2.0 */
+            white-space: pre-wrap;
+            /* current browsers */
+        }
+    }
 }
