--- a/frontend/src/components/homePage/HomePage.scss
+++ b/frontend/src/components/homePage/HomePage.scss
@@ -1,6 +1,6 @@
 @import './../../variables.scss';
 .home-page-wrapper {
-    background: url(/cover.jpg) no-repeat center center fixed;
+    background: url("/cover.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     /* For WebKit*/
     -moz-background-size: cover;
